<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_system_update"
            tools:srcCompat="@drawable/ic_system_update" />

        <TextView
            android:id="@+id/header_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="google-sans"
            android:gravity="center"
            android:paddingStart="46dp"
            android:paddingTop="5dp"
            android:paddingEnd="46dp"
            android:paddingBottom="5dp"
            android:text="@string/system_update_available"
            android:textColor="@color/text_primary"
            android:textSize="22sp" />

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ProgressBar
                android:id="@+id/progress_bar"
                style="@android:style/Widget.DeviceDefault.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingTop="4sp"
                android:paddingEnd="20dp"
                android:visibility="invisible"
                tools:progress="65"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/progress_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/progress_bar"
                android:ellipsize="marquee"
                android:singleLine="true"
                android:textAlignment="center"
                android:textSize="14sp"
                android:visibility="invisible"
                tools:text="162 of 300 MB (3 minutes left) • 65%"
                tools:visibility="visible" />
        </RelativeLayout>

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scrollbars="none"
            app:layout_constraintBottom_toTopOf="@+id/coordinatorLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/man_avatar_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:orientation="horizontal"
                    android:visibility="visible">

                    <ImageView
                        android:id="@+id/avatar"
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:layout_weight="0"
                        tools:srcCompat="@tools:sample/avatars" />

                    <TextView
                        android:id="@+id/notification_content"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="10dp"
                        android:paddingTop="2dp"
                        android:paddingEnd="10dp"
                        android:text="xxx"
                        android:textColor="@color/warning"
                        android:textSize="16sp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/whats_new"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:paddingStart="16dp"
                    android:paddingTop="16dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="16dp"
                    android:singleLine="false"
                    android:text="@string/this_is_what_s_new"
                    android:textColor="@color/text_primary"
                    android:textSize="16sp"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/advisory_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:paddingStart="16dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="5dp"
                    android:singleLine="false"
                    android:text="@string/advisory_notice_content"
                    android:textColor="@color/text_primary"
                    android:textSize="16sp"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/build_size"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:gravity="start"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:text="@string/update_size"
                    android:textColor="@color/text_primary"
                    android:textSize="16sp"
                    android:visibility="visible" />

                <LinearLayout
                    android:id="@+id/mobile_data_warning"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:orientation="horizontal"
                    android:visibility="visible">

                    <TextView
                        android:id="@+id/downloadtip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_info_outline_24"
                        android:drawablePadding="10dp"
                        android:text="@string/download_over_mobiledata_warning"
                        android:textColor="@color/warning"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/donation_tips"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:orientation="horizontal"
                    android:visibility="visible">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_attach_money_white_24dp"
                        android:drawablePadding="10dp"
                        android:text="@string/donation_tips"
                        android:textColor="@color/donation_tips"
                        android:textSize="16sp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/build_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="2"
                    android:textSize="14sp"
                    android:visibility="gone"
                    tools:text="29 February 2018" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="110dp" />
            </LinearLayout>

        </ScrollView>


    </LinearLayout>


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_weight="1"
        android:background="@drawable/action_button_layout_background"
        android:weightSum="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@id/update_action"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="start|bottom"
            android:layout_margin="16dp"
            android:background="@drawable/roundedbutton"
            android:fontFamily="google-sans"
            android:gravity="center"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/check_for_update"
            android:textAllCaps="false"
            android:textColor="#fff"
            tools:text="Pause" />

        <TextView
            android:id="@id/longpressmenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:text="@string/tiptext"
            tools:visibility="visible" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>
